@@ -367,33 +367,41 @@ SEXP Csparse_general_to_symmetric(SEXP x, SEXP uplo, SEXP sym_dmns)
     chgx = cholmod_copy(chx, /* stype: */ uploT, chx->xtype, &c);
 
     SEXP dns = GET_SLOT(x, Matrix_DimNamesSym);
-    if(asLogical(sym_dmns))
+    int symDmns = asLogical(sym_dmns); /* 1, NA_LOGICAL or 0 */
+    /* 3 cases:
+       FALSE: keep as is;
+       TRUE : symmetric dimnames in any case
+       NA   : symmetrize if(...)
+    */
+    if(symDmns == FALSE) { } // *keep* asymmetric dimnames:  do nothing
+    else if(symDmns == TRUE)
 	dns = symmetric_DimNames(dns);
-    else if((!isNull(VECTOR_ELT(dns, 0)) &&
-	     !isNull(VECTOR_ELT(dns, 1))) ||
-	    !isNull(getAttrib(dns, R_NamesSymbol))) {
-	/* symmetrize them if both are not NULL
-	 * or names(dimnames(.)) is asymmetric : */
-	dns = PROTECT(duplicate(dns));
-	if(!equal_string_vectors(VECTOR_ELT(dns, 0),
-				 VECTOR_ELT(dns, 1))) {
-	    if(uploT == 1)
-		SET_VECTOR_ELT(dns, 0, VECTOR_ELT(dns,1));
-	    else
-		SET_VECTOR_ELT(dns, 1, VECTOR_ELT(dns,0));
+    else // NA_LOGICAL (was 'FALSE' case) :
+	if((!isNull(VECTOR_ELT(dns, 0)) &&
+	    !isNull(VECTOR_ELT(dns, 1))) ||
+	   !isNull(getAttrib(dns, R_NamesSymbol))) {
+	    /* symmetrize them if both are not NULL
+	     * or names(dimnames(.)) is asymmetric : */
+	    dns = PROTECT(duplicate(dns));
+	    if(!equal_string_vectors(VECTOR_ELT(dns, 0),
+				     VECTOR_ELT(dns, 1))) {
+		if(uploT == 1)
+		    SET_VECTOR_ELT(dns, 0, VECTOR_ELT(dns,1));
+		else
+		    SET_VECTOR_ELT(dns, 1, VECTOR_ELT(dns,0));
+	    }
+	    SEXP nms_dns = getAttrib(dns, R_NamesSymbol);
+	    if(!isNull(nms_dns) &&  // names(dimnames(.)) :
+	       !R_compute_identical(STRING_ELT(nms_dns, 0),
+				    STRING_ELT(nms_dns, 1), 16)) {
+		if(uploT == 1)
+		    SET_STRING_ELT(nms_dns, 0, STRING_ELT(nms_dns,1));
+		else
+		    SET_STRING_ELT(nms_dns, 1, STRING_ELT(nms_dns,0));
+		setAttrib(dns, R_NamesSymbol, nms_dns);
+	    }
+	    UNPROTECT(1);
 	}
-	SEXP nms_dns = getAttrib(dns, R_NamesSymbol);
-	if(!isNull(nms_dns) &&  // names(dimnames(.)) :
-	   !R_compute_identical(STRING_ELT(nms_dns, 0),
-				STRING_ELT(nms_dns, 1), 16)) {
-	    if(uploT == 1)
-		SET_STRING_ELT(nms_dns, 0, STRING_ELT(nms_dns,1));
-	    else
-		SET_STRING_ELT(nms_dns, 1, STRING_ELT(nms_dns,0));
-	    setAttrib(dns, R_NamesSymbol, nms_dns);
-	}
-	UNPROTECT(1);
-    }
     /* Rkind: pattern, "real", complex or .. */
     return chm_sparse_to_SEXP(chgx, 1, 0, Rkind, "", dns);
 }
